discussion/kv_engine/138166/138166_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39292: 5/n Order set_collections with warmup

Delay the acceptance of a new manifest from ns_server
whilst warmup has yet to progress far enough.

Change-Id: Ief2235b875001a77d9a184bb0b598e7fefbc1f5f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-10-14 08:48:37.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-10-14 09:22:14.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5069/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kv_bucket.cc:2636:16: error: no viable conversion from returned value of type "cb::engine_errc" to function return type "cb::engine_error" [clang-diagnostic-error]
        return cb::engine_errc::would_block;
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:155:35: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from "cb::engine_errc" to "const cb::engine_error &" for 1st argument
class ENGINE_UTILITIES_PUBLIC_API engine_error : public std::system_error {
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:155:35: note: candidate constructor (the implicit move constructor) not viable: no known conversion from "cb::engine_errc" to "cb::engine_error &&" for 1st argument

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5069/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kv_bucket.cc:2636:16:
error: no viable conversion from returned value of type "cb::engine_errc" to function return type "cb::engine_error" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5069/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26868/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.cc:2636:16:
error: no viable conversion from returned value of type "cb::engine_errc" to function return type "cb::engine_error"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26868/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31130/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\kv_bucket.cc(2636): error C2440: "return": cannot convert from "cb::engine_errc" to "cb::engine_error" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31130/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6383/ : FAILURE

Compile error at [2020-10-14T09:19:13.447Z] ../kv_engine/engines/ep/src/kv_bucket.cc:2636:33:
error: could not convert ?would_block? from ?cb::engine_errc? to ?cb::engine_error?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6383/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6651/ : FAILURE

Compile error at [2020-10-14T09:09:45.499Z] ../kv_engine/engines/ep/src/kv_bucket.cc:2636:16:
error: no viable conversion from returned value of type "cb::engine_errc" to function return type "cb::engine_error"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6651/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5461/ : FAILURE

Compile error at [2020-10-14T08:52:07.285Z] ../kv_engine/engines/ep/src/kv_bucket.cc:2636:16:
error: no viable conversion from returned value of type "cb::engine_errc" to function return type "cb::engine_error"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5461/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14290/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6503/ : FAILURE

Compile error at [2020-10-14T09:06:04.357Z] ../kv_engine/engines/ep/src/kv_bucket.cc:2636:33:
error: could not convert ?would_block? from ?cb::engine_errc? to ?cb::engine_error?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6503/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3598/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
